5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1876_1641.log
== TEST (2019-07-03 18:53:16) 
-- CODE:
from numpy import*
vet= array(eval(zeros(vet, dtype=int)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:53:38) 
-- CODE:
from numpy import*
vet= array(eval(zeros(6, dtype=int)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:54:30) 
-- CODE:
from numpy import*
vet= zeros(3, dtype= int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:55:16) 
-- CODE:
from numpy import*
vet= zeros(3, dtype= int)
n= 
-- EXECUTION TIME:
0.801215
-- ERROR:
  File "/home/codebench/codes/1876/1641/main.py", line 3
    n= 
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:02:17) 
-- CODE:
from numpy import*
vet= zeros(3, dtype= int)
for i in range(i= vet%3 == 0):
	
-- EXECUTION TIME:
0.751373
-- ERROR:
  File "/home/codebench/codes/1876/1641/main.py", line 5
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
